--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1898,12 +1898,16 @@
       SLACcitation   = "%%CITATION = HEP-PH/0611129;%%",
 }
 
-@misc{DMatLHCProceedings,
-	author = "DM@LHC participants",
-	title = "{DM@LHC 2014 proceedings}",
-	note = "To appear",
+@article{DMatLHCProceedings,
+		author         = "Abdallah, Jalal and Araujo, Henrique and Arbey, Alexandre
+		and Ashkenazi, Adi and Belyaev, Alexander and others",
+		title          = "{Simplified Models for Dark Matter Searches at the LHC}",
+		year           = "2015",
+		eprint         = "1506.03116",
+		archivePrefix  = "arXiv",
+		primaryClass   = "hep-ph",
+		SLACcitation   = "%%CITATION = ARXIV:1506.03116;%%",
 	}
-	
 	
 %%% All references for experimental searches
 
@@ -2536,4 +2540,25 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	primaryClass   = "hep-ph",
 	reportNumber   = "CERN-PH-TH-2012-247, ZU-TH-21-12",
 	SLACcitation   = "%%CITATION = ARXIV:1209.6215;%%",
+}
+
+
+@misc{NewMadgraphModels,
+	title = {Simplified dark matter models at NLO, UFO for Feynrules2.3 and \madgraph. v0.1\_alpha: alpha version},
+	howpublished = "\url{https://feynrules.irmp.ucl.ac.be/wiki/DMsimp}",
+	year = {2015}, 
+	note = "[Online; accessed 12-June-2015]"
+}
+
+@article{Baur:1989cm,
+	author         = "Baur, U. and Glover, E.W. Nigel",
+	title          = "{Higgs Boson Production at Large Transverse Momentum in
+	Hadronic Collisions}",
+	journal        = "Nucl.Phys.",
+	volume         = "B339",
+	pages          = "38-66",
+	doi            = "10.1016/0550-3213(90)90532-I",
+	year           = "1990",
+	reportNumber   = "MAD-PH-547, FERMILAB-PUB-89-243-T",
+	SLACcitation   = "%%CITATION = NUPHA,B339,38;%%",
 }
