--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -128,9 +128,9 @@
 %
 %\input{tex/Introduction.tex}
 
-%\chapter{\texorpdfstring{Simplified models for all \MET+X analyses}{Simplified models for all MET+X analyses}}
-%\label{subsec:MonojetLikeModels}
-%\input{tex/MonojetLikeModels}
+\chapter{\texorpdfstring{Simplified models for all \MET+X analyses}{Simplified models for all MET+X analyses}}
+\label{subsec:MonojetLikeModels}
+\input{tex/MonojetLikeModels}
 %
 %%\chapter{Specific models for signatures with heavy flavor quarks}
 %%\label{subsec:DMHFModels}
