--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -1,4 +1,4 @@
-\section{\texorpdfstring{Implementation of \schannel and other models for \MET+X analyses}{Implementation of \schannel and \tchannel models for MET+X analyses}}
+\section{\texorpdfstring{Implementation of \schannel and \tchannel models for \MET+X analyses}{Implementation of \schannel and \tchannel models for MET+X analyses}}
 
 In the studies to date, a number of different Monte Carlo tools have
 been used to simulate DM signals.  In this Chapter, we make recommendations 
@@ -9,35 +9,35 @@ status of publicly available codes and users should always check whether new res
 at a better accuracy have appeared in the meantime. In that case, we recommend to update
 the corresponding analyses  directly using the new releases and/or codes, and in case this would not be possible,
 to at least take into account the new information in the analysis (e.g., via a MC comparison with the latest predictions, 
-or by effectively or using global/local $K$-factors).
+or by effectively using global/local $K$-factors). 
 
-\subsection{Implementation of ``s-channel'' models for mono-jet signature}
+\subsection{Implementation of  \schannel  models for mono-jet signature}
 \label{sec:monojet_implementation}
 
 These models include those discussed in Secs.~\ref{sec:monojet_V} and \ref{sec:monojet_scalar}.
-In monojet analyses, i.e. when final states are selected with a few jets and \MET{}, observables and in particular the \MET{} spectrum depend upon the accuracy of the simulation of QCD radiation from the initial state.
+In monojet analyses, i.e. when final states are selected with a few jets and \MET{}, observables and in particular the \MET{} spectrum depend upon the accuracy of the simulation of QCD radiation.
 For the vector and axial vector models, the current state of the art is  NLO+PS. It is particularly simple to obtain simulations for these processes at NLO+PS and even for merged samples at NLO accuracy, starting from SM implementations.  We therefore recommend simulations to be performed at NLO+PS, and in case multi-jet observables are employed,  by merging samples with different multiplicities. 
-Results at such accuracy can be obtained either in dedicated implementations, such as that of  \powheg \cite{Haisch:2013ata}, or via general purpose NLO tools like \madgraph employing currently available UFO models at NLO.~\footnote{The validation of a dedicated DM UFO model at NLO using the notation of Secs.~\ref{sec:monojet_V} and \ref{sec:monojet_scalar} is in progress.}
+Results at such accuracy can be obtained either in dedicated implementations, such as that of  \powheg \cite{Haisch:2013ata}, or via general purpose NLO tools like \madgraph employing available UFO models at NLO~\footnote{The validation of a dedicated DM UFO model at NLO using the notation of Secs.~\ref{sec:monojet_V} and \ref{sec:monojet_scalar} is in progress: 
+In June 2015, a testing version of the full set of these UFO models has been made available \cite{NewMadgraphModels}. This implementation has not been used for the studies within this Forum and will not be used as early Run-2 benchmark for LHC searches. Nevertheless we recommend further testing for ATLAS and CMS searches on a longer timescale.}.
 
-A study using POWHEG~\cite{Haisch:2013ata} has shown that the NLO corrections result in a substantial reduction in the dependence on the choice of the renormalization and factorization scales and hence a reduced theoretical uncertainty on the signal prediction. For the central choice of renormalization and factorization scales,
-the NLO corrections also provide a minor enhancement in the cross section.
+A study using POWHEG~\cite{Haisch:2013ata,Fox:2012ru} has shown that the NLO corrections result in a substantial reduction in the dependence on the choice of the renormalization and factorization scales and hence a reduced theoretical uncertainty on the signal prediction. For the central choice of renormalization and factorization scales, the NLO corrections also provide a minor enhancement in the cross section due to the jet veto that has been so far employed in Run-1 analyses.
 
 For the scalar and pseudoscalar models, the lowest order process
 already involves a one-loop amplitude in QCD.
 Because of the complexity of performing NLO calculations for this class of processes and in particular the absence of general methods for computing two-loop virtual contributions, only LO predictions are currently available. These can be interfaced to shower programs exactly as usual tree-level Born computations, i.e. by considering one parton multiplicity at the time
 or by merging different parton multiplicities via CKKW or MLM schemes to generate inclusive samples with jet rates at LO accuracy.  For spin-0 mediators in the mono-jet final state,
 the top-quark loop is the most important consideration.
-The matrix element implementation with exact top-loop dependence of the \schannel spin-0 mediated DM production is available in \mcfm~\cite{Fox:2012ru,Harris:2014hga} at fixed order and in \powheg~\cite{Haisch:2015ioa} and \madgraph~\cite{} for  event generation at LO+PS level. The \powheg and \mcfm implementations include the finite
-top quark mass dependence for DM pair production and 1 extra parton at LO. The same processes are available in \madgraph v2.3 and in {\sc Sherpa+OpenLoops/GoSam}, including  up to 2 extra partons in the final state. Samples can be merged employing CKKW, $K_T$-MLM  and MEPS@LO procedures.\Todo{Uli's comment: are those public?}
+The matrix element implementation with exact top-loop dependence of the \schannel spin-0 mediated DM production is available in \mcfm~\cite{Fox:2012ru,Harris:2014hga}~\footnote{Only the scalar mediator is available in the public release.} at fixed order and in \powheg~\cite{Haisch:2015ioa} and \madgraph~\cite{NewMadgraphModels} for event generation at LO+PS level. The \powheg and \mcfm implementations include the finite
+top quark mass dependence for DM pair production and one extra parton at LO. The same processes are available in \madgraph v2.3 and in {\sc Sherpa+OpenLoops/GoSam}, including  up to two extra partons in the final state. Samples can be merged employing CKKW, $K_T$-MLM  and MEPS@LO procedures.\Todo{Uli's comment: are those public?}
 %For consistency with the spin-1 generation, we recommend using \powheg.
 
-Most of the results that have been presented in this document for these processes at NLO+PS accuracy have been obtained with POWHEG interfaced to \pythiaEight. For future reference, we document the specific settings needed to run the \powheg generation for the Dark Matter models so they can serve as nominal benchmarks for the early Run-2 ATLAS and CMS DM analyses. \powheg parameter cards for all models can be found on the Forum SVN repository~\cite{ForumSVN_DMA, ForumSVN_DMV, ForumSVN_DMS_tloop, ForumSVN_DMP_tloop}.
+Most of the results that have been presented in this document for these processes have been obtained with \powheg interfaced to \pythiaEight, matching the state of the art calculation as of Spring 2015. For future reference, we document the specific settings needed to run the \powheg generation for the Dark Matter models so they can serve as nominal benchmarks for the early Run-2 ATLAS and CMS DM analyses. \powheg parameter cards for all models can be found on the Forum SVN repository~\cite{ForumSVN_DMA, ForumSVN_DMV, ForumSVN_DMS_tloop, ForumSVN_DMP_tloop}.
 
-\subsubsection{\powheg configuration for DM models}
+\subsubsection{\powheg configuration for \schannel DM models}
 
 The lastest \powheg release is available for download using the
 instructions at
-\url{http://powhegbox.mib.infn.it/}.   The forum recommends
+\url{http://powhegbox.mib.infn.it/}. The Forum recommends
 using at least version \texttt{3059}.
 
 \begin{itemize}
@@ -178,7 +178,7 @@ In this report we have mostly employed \madgraph.
 new models via the {\sc FeynRules} package.
 \madgraph can perform both LO and NLO calculations in QCD, matched/merged to parton showers. For NLO ones, dedicated UFO model implementations at NLO should be used. Several UFO models at NLO are publicly available that while not developed specifically for DM, are suitable to make mode independent simulations at NLO accuracy, including multiparton merging 
 via the FxFx technique~\cite{Frederix:2012ps}. A dedicated DM UFO implementation 
-has been developed and its release being finalised.
+has been developed and it has been released as a testing version~\cite{NewMadgraphModels}.
 
 Merging events generated via matrix elements with different number of partons in the final state can be achieved by a judicious procedure that  avoids double counting of the partons from matrix elements and parton showering.
 Several merging techniques are available. Based on some comparative studies \,\cite{Alwall:0706.2569}, there is some advantage to using the CKKW-L merging scheme \cite{Lonnblad:2011xx} implemented in \pythiaEight.  Alternatively, one can use the $k_T$-MLM scheme also available in \pythiaEight.
@@ -202,7 +202,7 @@ add process p p > chi chi~ j j [QCD] @2
 
 The runtime parameters are more numerous, and define the
 collider properties, PDF sets, etc.   The specific parameters
-needed for matching are, for example:
+needed for matching are, for the example of CKKW-L matching:
 \begin{verbatim}
 ickkw = 0
 ktdurham = matching scale
@@ -229,7 +229,7 @@ Merging:TMS              = matching scale
 1000022:all = chi chi~ 2 0 0 30.0 0.0 0.0 0.0 0.0 
 1000022:isVisible = false
 Merging:doKTMerging      = on
-Merging:Process          = pp>{chi,1000022}{chi~ -1000022}
+Merging:Process          = pp>{chi,1000022}{chi~, -1000022}
 Merging:nJetMax          = 2
 \end{verbatim}
 The matching scales should be the same for the generation and parton showering.
@@ -320,7 +320,7 @@ The \texttt{Merging:Process} command specifies the lowest parton emission proces
 %% \subsubsection{Parton emission multiplicity}
 %% \label{sec:monojet_parton_emission}
 
- The prescription for the event generation given in Section\,\ref{sec:match_implementation} starts with the emission of 0 partons and ends with maxim 2 partons in addition. Producing the samples separately allows to investigate the relative composition of the individual samples in various parts of the phase space. Figure\,\ref{fig:Kine_D5_80} shows the \MET distribution of the EFT D5 sample with the matching scale at 80\,\gev. The plot reveals that the 0-parton sample gives the dominant contribution in the region below the matching scale value that rapidly decreases at higher \MET. Assuming the lowest analysis \MET cut in Run-2 mono-jet analyses at 300\,\gev, the generation of the 0-parton emission sample can be safely omitted as it only gives $<1\%$ contribution at $\MET>300\,\gev$. For the 1- and 2-parton emission samples, one can use a generator cut on the leading parton $\pT$, \texttt{ptj1min}, in order to avoid generating low \MET events that are irrelevant for the analysis.
+ The prescription for the event generation given in Section\,\ref{sec:match_implementation} starts with the emission of 0 partons and ends with maxim 2 partons in addition. Producing the samples separately allows to investigate the relative composition of the individual samples in various parts of the phase space. Figure\,\ref{fig:Kine_D5_80} shows the \MET distribution of the EFT D5 sample with the matching scale at 80\,\gev. The plot reveals that the 0-parton sample gives the dominant contribution in the region below the matching scale value that rapidly decreases at higher \MET. Assuming the lowest analysis \MET cut in early Run-2 mono-jet analyses at 300\,\gev, the generation of the 0-parton emission sample can be safely omitted as it only gives $<1\%$ contribution at $\MET>300\,\gev$. For the 1- and 2-parton emission samples, one can use a generator cut on the leading parton $\pT$, \texttt{ptj1min}, in order to avoid generating low \MET events that are irrelevant for the analysis.
 
  \begin{figure}[h!]
  	\centering  
@@ -349,7 +349,7 @@ Figure\,\ref{fig:RatioKine_D5} shows the \MET distribution of the samples at $\M
 
 %With an event selection requiring \MET and the leading jet \pT being larger than $250\,\gev$ and allowing for up to 3 jets with $\pT>30\,\gev$, the sample generated with up to 1 parton has 17.4\% smaller yield compared to the sample with up to 3 partons, while the yield of the sample with up to 2 partons is only 2.2\% smaller.
 With an event selection requiring \MET and the leading jet \pT being larger than $250\,\gev$, the sample generated with up to 1 parton has 10.3\% larger yield compared to the sample with up to 3 partons, while the yield of the sample with up to 2 partons is only 2.3\% larger.
-If an additional cut is applied allowing for up to 3 jets with $\pT>30\,\gev$, the agreement improves to 3.2\% larger for up to 1 parton and 0.7\% larger for up to 2 partons, comapred with up to 3 partons.
+If an additional cut is applied allowing for up to 3 jets with $\pT>30\,\gev$, the agreement improves to 3.2\% larger for up to 1 parton and 0.7\% larger for up to 2 partons, compared with up to 3 partons.
 %Note the jet multiplicity cut is important here as the agreement between the two samples improves at higher \MET when the cut is not applied.
 %At \MET>400\,\gev$, 0+1 parton emission has 16.8\% yield less and 0+1+2 parton emission has 2.4\% less compared to 0+1+2+3 parton emission. With $\MET>600\,\gev$, 0+1 parton emission has 16.5\% yield less and 0+1+2 parton emission has 2.9\% less compared to 0+1+2+3 parton emission. The same numbers hold if a symmetric cut is added on leading jet transverse momentum.
 A similar comparison is shown in Fig.\,\ref{fig:RatioKine_D5_2} for the jet multiplicity in the events with the leadning jet $\pT>250\,\gev$, where an agreement at the level of $\sim3\%$ between the samples with up to 2 and 3 parton emissions is observed for number of jets up to 7.
@@ -393,39 +393,34 @@ This justifies it is sufficient to produce samples with up to 2 parton emissions
 	\label{fig:RatioKine_D5_2}
 \end{figure}
 
-\subsection{Simulations for EW final states}
+\subsection{Implementation of \tchannel models for the jet+\MET{} final state}
+\label{sec:tchannel_implementation}
+
+The simulations for \tchannel models are available via LO UFO implementations, where events are generated at LO+PS accuracy. The UFO file and parameter cards for the \tchannel models with couplings to light quarks only~\cite{Papucci:2014iwa} can be found on the Forum SVN repository~\cite{ForumSVN_TChannel_PapucciVichiZurek}. The model files from Ref.~\cite{Bell:2012rg} can also be found on the repository~\cite{ForumSVN_TChannel_Amelia}. The latter is the implementation that will be used for early Run-2 LHC Dark Matter searches: there are only cross section differences between this model and the model in~\cite{ForumSVN_TChannel_PapucciVichiZurek}.~\Todo{This is being checked with the authors.}
+Multi-parton simulation and merging are necessary and require particular care for this model: this has not been a topic of detailed studies within the Forum, and we suggest to follow the procedure outlined in Ref.~\cite{Papucci:2014iwa}. 
+
+\subsection{Implementation of \schannel and  \tchannel models with EW bosons in the final state}
 \label{sec:EW_implementation}
 
-Currently, simulations for most of these models are available via LO UFO implementations, allowing event generation at the LO+PS accuracy. 
-We note, however, that inclusion of NLO corrections would be straightforward. In \madgraph, for example, this amounts to simply upgrading 
-the currently employed UFO models to NLO, something that trivial for this class of processes. However, this has not been done within
-the timescale of the Forum. 
+Currently, simulations for most of these models are available via LO UFO implementations, allowing event generation at the LO+PS accuracy. We note, however, that inclusion of NLO corrections would be possible. In \madgraph, for example, this amounts to simply upgrading the currently employed UFO models to NLO, where the calculations exist for this class of processes. However, this was not available within the timescale of the Forum towards simulation of early Run-2 benchmarks. As a consequence, in this work we have used LO UFO implementations within \madgraph 2.2.3 interfaced to \pythiaEight for the parton shower. The corresponding parameter cards used for the Run-2 benchmark models can be found on the Forum SVN repository~\cite{ForumSVN_EW_DMV}. This is the implementation that will be used for early Run-2 LHC Dark Matter searches.
 
-In this review, we have used LO UFO implementations within \madgraph 2.2.2 interfaced to \pythiaEight for the parton shower.
-Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_EW_DMV}.
-In the examples that follow we have not merged samples with different parton multiplicities  
+None of these models requires merging samples with different parton multiplicities  
 since the visible signal comes from the production of a heavy SM boson whose transverse momentum distribution is sufficiently 
-well described at LO+PS level.  As a result, no special runtime configuration is needed for \pythiaEight.
+well described at LO+PS level.  As a result, no special runtime configuration is needed for \pythiaEight. 
 
-\subsection{\texorpdfstring{Implementation of models with heavy flavor quark signatures}{Simulations for models with heavy flavor quark signatures}}
+\subsection{\texorpdfstring{Implementation of \schannel and \tchannel models with heavy flavor quark signatures}{Simulations for models with heavy flavor quark signatures}}
 \label{sec:TTBar_implementation}
 
 Dedicated implementations for DM signals in this final state are available at LO+PS accuracy. 
-However,  the state of the art of the simulations for $t \bar{t}$ and $b \bar{b}$  + a generic scalar and vector is NLO+PS accuracy. 
-For example, simulations for $t \bar{t}$ + scalar can be obtained via \powheg and {\sc sherpa} starting from the SM implementations. 
-In \madgraph,  all final relevant final states, spin-0 (scalar and pseudo scalar) and spin-1, (vector and axial) are available  at NLO+PS 
-via the HC model~\cite{Artoisenet:2013puc} implementation while a dedicated NLO UFO  for DM is being released at the time of writing).
+However, the state of the art of the simulations for $t \bar{t}$ and $b \bar{b}$ with a generic scalar and vector mediator is NLO+PS accuracy. For example, simulations for $t \bar{t}$ + scalar can be obtained via \powheg and {\sc sherpa} starting from the SM implementations. In \madgraph,  all final relevant final states, spin-0 (scalar and pseudo scalar) and spin-1, (vector and axial) are available  at NLO+PS via the HC model~\cite{Artoisenet:2013puc} implementation while the testing version for the dedicated NLO UFO for DM has been released in June 2015~\cite{NewMadgraphModels}).
 
-In our work simulations for the $t \bar{t}$ and $b \bar{b}$ signatures have been 
-generated at leading order with \madgraph 2.2.2, using \pythiaEight for the parton shower. 
-Merging has been used. 
-\Todo{Cross-check with Priscilla that this is the case} 
-Parameter cards can be found on the Forum SVN repository~\cite{ForumSVN_DMTTBar}.
-
-We have simulated the bFDM model at LO+PS using \madgraph v2.2.3 and \pythiaEight for the parton shower.  
-Multi-parton merging is recommended in the case of the $b\bar{b}$+\MET{} final state, 
-but it has not been studied within the Forum. 
-The corresponding card files can be found on the Forum SVN repository~\cite{ForumSVN_DMSingleB}.
+In the work of this Forum, simulations for the $t \bar{t}$ and $b \bar{b}$ signatures of the scalar mediator model have been 
+generated starting from a leading order UFO with \madgraph 2.2.2, using \pythiaEight for the parton shower. 
+The UFO file and parameter cards that will be used as benchmarks 
+for early Run-2 searches in these final states can be found on the Forum SVN repository~\cite{ForumSVN_DMTTBar}.
+Multi-parton merging has been used for the $b \bar{b}$ case but it has not been studied in detail within this Forum. 
+The b-flavored DM model of Section~\ref{} is simulated at LO+PS using \madgraph v2.2.3 and \pythiaEight for the parton shower.  
+The corresponding UFO and parameter files can be found on the Forum SVN repository~\cite{ForumSVN_DMSingleB}.
 
 \subsubsection{Quark flavor scheme and masses}
 
@@ -487,12 +482,11 @@ either flavor scheme used for DM+$b\bar{b}$. In our generation we have used  NNP
 \label{sub:monoHiggs}
 
 Currently, simulations for most of these models are available via LO UFO implementations, allowing event generation at the 
-LO+PS accuracy. We note, however, that the inclusion of NLO corrections would be straightforward but not available in time for the conclusion of these studies. 
-In \madgraph, for example, this amounts to simply upgrading the currently employed UFO models to NLO, something trivial for this class of processes. Simulation of  loop-induced associated production of DM and Higgs is also possible with the exact top-quark mass dependence. In  \madgraph, for example, this can be obtained from the NLO UFO SM and 2HDM implementations. 
+LO+PS accuracy. We note, however, that the inclusion of NLO corrections would be possible but not available in time for the conclusion of these studies. In \madgraph, for example, this amounts to simply upgrading the currently employed UFO models to NLO. Simulation of  loop-induced associated production of DM and Higgs is also possible with the exact top-quark mass dependence. In \madgraph, for example, this can be obtained from the NLO UFO SM and 2HDM implementations. 
 
 In this work all three Higgs+\MET models have been generated at leading
 order with \madgraph 2.2.2, using \pythiaEight for the parton shower. No merging procedure has been employed.
-The LO UFO implementations of the scalar and vector models can be found on the Forum SVN  
+The LO UFO implementations of the scalar and vector models that will be used as early Run-2 benchmarks can be found on the Forum SVN  
 repository~\cite{ForumSVN_EWMonoHiggs}, while the 2HDM model can be found at this link~\cite{ForumSVN_EWMonoHiggs_2HDM}.
 
 As a final technical remark, we suggest always to let the shower program handle the  $h$ decay 
@@ -504,14 +498,14 @@ accounted for by the shower program.
 
 The case of the associated production of a Higgs and scalar mediator via a top-quark loop can be either considered 
 exactly or via an effective Lagrangian where the top-quark is integrated out. While this latter model has 
-been shown not to be reliable~\cite{Haisch:2012kf,Hespel:2014sla}, for simplicity we have chosen to perform
+been shown not to be reliable~\cite{Haisch:2012kf,,Hespel:2014sla, Baur:1989cm}, for simplicity we have chosen to perform
 the study in this tree-level effective formulation. A full study of the process including
 finite top-quark mass and parton shower effects is possible yet left for future work.
 
 \subsubsection{\madgraph details for 2HDM Higgs+MET model}
 
-While a 2HDM UFO implementation at NLO accuracy to be used with \madgraph is 
-available~\cite{FeynRulesWebPage}\Todo{Uli doesn't find it.}, in this work we have only considered LO simulations.
+While a 2HDM UFO implementation at NLO accuracy to be used with \madgraph has been made available at the end of the work
+of the Forum~\cite{NewMadgraphModels}, in this work we have only considered LO simulations.~\Todo{Not sure this is available yet?}
   
 The two couplings that can be changed in the implemented model follow the nomenclature below:
  \begin{itemize}
@@ -536,12 +530,13 @@ The other masses are unchanged and do not affect the result.
  and then add the two signal processes together weighted by cross sections.
  % These signals should be generated separately since they have different $\tan \beta, M_A$ dependence.  
 
-\subsection{Implementation of EFT models}
+\subsection{Implementation of EFT models for EW boson signatures}
 \label{sub:EFTModels}
 
 The state of the art for these models is LO+PS. NLO+PS can be achieved
-without difficulty but the corresponding implementation is not yet available.
+as well, but the corresponding implementation is not yet available.
 In our simulations we have implemented the models in the corresponding
-UFO files and  generated events at LO via \madgraph 2.2.2, using \pythiaEight for the parton shower. We have not generated events with extra patrons and merging.
-Parameter cards can be found on the Forum SVN repository:~\cite{ForumSVN_EWMonoHiggs} for operators with Higgs+MET final states
-and ~\cite{ForumSVN_EWEFTD7} for $W/Z/\gamma$ final states.
+UFO files and  generated events at LO via \madgraph 2.2.2, using \pythiaEight for the parton shower. 
+UFO files and parameter cards that will be used as early Run-2 benchmarks can be found on the Forum SVN repository:~\cite{ForumSVN_EWMonoHiggs} for operators 
+with Higgs+MET final states and ~\cite{ForumSVN_EWEFTD7} for $W/Z/\gamma$ final states.
+These models do not require merging.
