--- a/doc/tex/SummaryTable.tex
+++ b/doc/tex/SummaryTable.tex
@@ -15,23 +15,24 @@
 	Signature & State of the art calculation and tools & Link to implementation & References \\ 
 	\cmidrule(r){1-4} 
     jet + \MET{} & \textbf{NLO+PS (\powheg, r3059)} & \cite{ForumSVN_DMA, ForumSVN_DMV} & \parbox{4cm} {\cite{Haisch:2013ata,Haisch:2015ioa,Alioli:2010xd,Nason:2004rx,Frixione:2007vw} }\\ 
-	& NLO+PS (UFO + \madgraph) & Not yet available & \parbox{4cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} } \\ 		
+	& NLO+PS (UFO + \madgraph) & \cite{NewMadgraphModels} & \parbox{4cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} } \\ 		
 	& NLO (\mcfm) & Not yet available & \parbox{4cm} {\cite{Fox:2012ru,Harris:2014hga} }\\ 
 	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3)} & \cite{ForumSVN_EW_DMV} & 
 	\parbox{4cm} {\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }  \\ 
 
 
-%	\cmidrule(r){1-4} 
-%	\multicolumn{4}{c}{scalar/pseudoscalar mediator, \schannel (Sec.~\ref{sec:monojet_scalar})}\\
-%	\cmidrule(r){1-4} 
-%	Signature & State of the art calculation and tools& Link to implementation & References \\ 
-%		\cmidrule(r){1-4} 
-%		
-%	jet + \MET{} & \textbf{LO+PS, top loop (\powheg, r3059)} &  \cite{ForumSVN_DMS_tloop, ForumSVN_DMP_tloop} &  \parbox{4cm} {\cite{Haisch:2013ata,Haisch:2015ioa,Alioli:2010xd,Nason:2004rx,Frixione:2007vw} } \\ 
-%	& LO, top loop (\mcfm) & Not yet available & \cite{Fox:2012ru,Harris:2014hga} \\ 
-%	& NLO+PS (UFO+\madgraph) & Not yet available (?) & \parbox{4cm} {\cite{Alwall:2014hca,Hirschi:2011pa,Alloul:2013bka,Degrande:2011ua} }\\ 		
-%	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) & \cite{} & \parbox{4cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
-%    $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) &  \cite{ForumSVN_DMTTBar} & \parbox{4cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+	\cmidrule(r){1-4} 
+	\multicolumn{4}{c}{scalar/pseudoscalar mediator, \schannel (Sec.~\ref{sec:monojet_scalar})}\\
+	\cmidrule(r){1-4} 
+	Signature & State of the art calculation and tools& Link to implementation & References \\ 
+		\cmidrule(r){1-4} 
+		
+	jet + \MET{} & \textbf{LO+PS, top loop (\powheg, r3059)} &  \cite{ForumSVN_DMS_tloop, ForumSVN_DMP_tloop} &  \parbox{4cm} {\cite{Haisch:2013ata,Haisch:2015ioa,Alioli:2010xd,Nason:2004rx,Frixione:2007vw} } \\ 
+	& LO, top loop (\mcfm) & Not yet available & \cite{Fox:2012ru,Harris:2014hga} \\ 
+	& NLO+PS (UFO+\madgraph) & \cite{NewMadgraphModels} & \parbox{4cm} {\cite{Alwall:2014hca,Hirschi:2011pa,Alloul:2013bka,Degrande:2011ua} }\\ 		
+	$W/Z/\gamma$ + \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) & \cite{} & \parbox{4cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+    $t\bar{t},b\bar{b}$+ \MET{} & \textbf{LO+PS (UFO + \madgraph v2.2.3}) &  \cite{ForumSVN_DMTTBar} & \parbox{4cm} { \cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} }\\ 
+    
 %%    DMS contains S and P mediators that couple to the quark in a Yukawa-like way (at NLO). 
 %%    Since top quarks are not present in the proton, here the processes that dominate at tree-level are
 %%    b bbar -> chi chibar g (via S or P)
